bugfix:userscalable bugfix on iphone

--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -21,7 +21,7 @@ html {
   padding: 0;
 }
 body {
-  touch-action: none;
+  touch-action: pan-x pan-y;
 }
 
 @primary: #ec5a1b;
